2005-09-27  Jay Belanger  <belanger@truman.edu>

	* calc/calc-lang.el (math-oper-table): Raise the precedence of "/"
	in TeX mode.

2005-09-26  Juanma Barranquero  <lekktu@gmail.com>

	* textmodes/org.el (org-table-sum): Fix format string.

	* textmodes/tex-mode.el (tex-insert-quote, latex-indent):
	Quote face names.

2005-09-26  Romain Francoise  <romain@orebokech.com>

	* isearch.el (isearch-forward-regexp): Close doc string.

2005-09-25  Richard M. Stallman  <rms@gnu.org>

	* simple.el (blink-matching-open): Don't no-op when point is BEGV+1.

	* isearch.el (isearch-forward, isearch-forward-regexp): Doc fixes.

	* progmodes/compile.el (compilation-error-properties):
	When getting the file from the previous error message,
	correctly decode the new data format.

	* progmodes/cc-cmds.el (c-electric-paren):
	Call old-blink-paren only for close-paren.

2005-09-24  Andreas Schwab  <schwab@suse.de>

	* term/rxvt.el (rxvt-register-default-colors): Delete redundant
	condition.

2005-09-25  Romain Francoise  <romain@orebokech.com>

	* dired-aux.el (dired-copy-file-recursive):
	* dired.el (dired-delete-file):
	* ediff-mult.el (ediff-dir-diff-copy-file):
	* ediff-util.el (ediff-test-save-region):
	* forms.el (forms-mode):
	* ido.el (ido-file-internal, ido-delete-file-at-head):
	* log-edit.el (log-edit-done):
	* ses.el (ses-yank-resize):
	* play/gomoku.el (gomoku-human-plays, gomoku)
	(gomoku-human-resigns, gomoku-prompt-for-other-game)
	(gomoku-offer-a-draw):
	* play/landmark.el (lm-human-resigns, lm):
	* net/eudcb-ldap.el (eudc-ldap-check-base):
	* play/mpuz.el (mpuz-offer-abort, mpuz-try-letter, mpuz-close-game):
	* progmodes/ebrowse.el (ebrowse-find-pattern):
	* progmodes/idlw-shell.el (idlwave-shell-set-bp-check):
	* textmodes/reftex-index.el (reftex-index-initialize-phrases-buffer):
	End `yes-or-no-p' and `y-or-n-p' prompts with question mark and
	space.

	* vc.el (vc-delete-file):
	* play/gomoku.el (gomoku-terminate-game, gomoku)