@@ -1,3 +1,8 @@
+2005-09-28  Romain Francoise  <romain@orebokech.com>
+
+	* comint.el (comint-show-output): Really set point at the
+	beginning of the output when not using `comint-use-prompt-regexp'.
+
 2005-09-27  Jay Belanger  <belanger@truman.edu>
 
 	* calc/calc-lang.el (math-oper-table): Raise the precedence of "/"
